update api_spec
