# api/src/main/java/ee/biceps/api/generated/api/ProductsApiController.java
@@ -1,0 +1,45 @@
+package ee.biceps.api.generated.api;
+
+import ee.biceps.api.generated.model.ErrorMessage;
+import ee.biceps.api.generated.model.ProductDTO;
+
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.CookieValue;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.constraints.*;
+import javax.validation.Valid;
+
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import javax.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-01-31T00:11:07.611698567+02:00[Europe/Tallinn]")
+@Controller
+@RequestMapping("${openapi.biceps.base-path:}")
+public class ProductsApiController implements ProductsApi {
+
+    private final ProductsApiDelegate delegate;
+
+    public ProductsApiController(@Autowired(required = false) ProductsApiDelegate delegate) {
+        this.delegate = Optional.ofNullable(delegate).orElse(new ProductsApiDelegate() {});
+    }
+
+    @Override
+    public ProductsApiDelegate getDelegate() {
+        return delegate;
+    }
+
+}
